add detail controller

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,9 @@
 
-<div class="row" infinite-scroll='loadMoreRecords()'>
+<label>Search: <input ng-model="searchText" /></label>
+<div class="row" infinite-scroll='loadMoreRecords()' infinite-scroll-listen-for-event="list:filtered">
 
-  <div ng-repeat="item in pokemonList" class="col-sm-3">
-    <a class="center-block text-center" href="Detail/{{item.name}}">
+  <div ng-repeat="item in pokemonList | filter:searchText" class="col-sm-3">
+    <a class="center-block text-center" href="#/detail/{{item.name}}">
       <label>{{item.name}}</label>
     <div class="col-sm-12">
 <img src="https://img.pokemondb.net/sprites/omega-ruby-alpha-sapphire/dex/normal/{{item.name}}.png" alt="{{item.name}}"/>
