--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,31 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+.animate-enter,
+.animate-leave
+{
+    -webkit-transition: 575ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+    -moz-transition: 575ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+    -ms-transition: 575ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+    -o-transition: 575ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+    transition: 575ms cubic-bezier(0.000, 0.000, 0.580, 1.000) all;
+    position: relative;
+    display: block;
+}
 
+.animate-enter.animate-enter-active,
+.animate-leave {
+    opacity: 1;
+    top: 0;
+    height: 30px;
+}
+
+.animate-leave.animate-leave-active,
+.animate-enter {
+    opacity: 0;
+    top: -50px;
+    height: 0px;
+}
 
 .pokemon-box{
   height:182px;
